# 2026-keep-backup

./: .env.example  .gitignore  AGENTS.md  CONCEPT.md  Dockerfile  GOV﻿ERNANCE_TEMPLATE.md  MANIFEST.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: backup-ci.yml  no-profile-smoke-pr.yml  secrets-notify-check.yml
docs/: troubleshooting.md  vertical-slice-standard.md  vertical-slice-thin.md
docs/adr/: 0001-ci-dependency-policy-unify-uv.md
docs/diagrams/: 01-sequence.md  02-dfd-detailed.mmd  02-dfd.md  03-ci.md
fixtures/: dom_snapshot_2026-03-04_061354.html  keep_mock.html
src/keep_backup/: __init__.py  app.py  cli.py  io.py  runner.py
tests/: test_cli.py  test_runner_backup.py  test_runner_dom_snapshot.py  test_runner_finalize.py  test_runner_smoke_verify.py
