[project]
name = "keep-backup"
version = "0.1.0"
description = "Minimal backup runner for Google Keep."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "keep-backup" },
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
